搭建比赛系统,完善总体系统